--- a/src/Monster's Kitchen/Assembly-CSharp.csproj
+++ b/src/Monster's Kitchen/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Orders.cs" />
      <Compile Include="Assets\Scripts\Cauldron.cs" />
      <Compile Include="Assets\Scripts\Door.cs" />
      <Compile Include="Assets\Scripts\Ingredient.cs" />
