--- a/src/Monster's Kitchen/Assembly-CSharp.csproj
+++ b/src/Monster's Kitchen/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Scripts\Ingredient.cs" />
      <Compile Include="Assets\Scripts\Interactable.cs" />
      <Compile Include="Assets\Scripts\Order.cs" />
+     <Compile Include="Assets\Scripts\OrderCreater.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\Recipe.cs" />
  <Reference Include="UnityEngine.Networking">
