--- a/src/Monster's Kitchen/Monster's Kitchen.CSharp.csproj
+++ b/src/Monster's Kitchen/Monster's Kitchen.CSharp.csproj
@@ -71,9 +71,12 @@
     <Compile Include="Assets\Scripts\Cauldron.cs" />
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\Ingredient.cs" />
+    <Compile Include="Assets\Scripts\IngredientContainers.cs" />
     <Compile Include="Assets\Scripts\Interactable.cs" />
+    <Compile Include="Assets\Scripts\Inventroy.cs" />
     <Compile Include="Assets\Scripts\Order.cs" />
     <Compile Include="Assets\Scripts\OrderCreater.cs" />
+    <Compile Include="Assets\Scripts\OrderList.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Recipe.cs" />
   </ItemGroup>
