--- a/src/Monster's Kitchen/Monster's Kitchen.CSharp.csproj
+++ b/src/Monster's Kitchen/Monster's Kitchen.CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Cauldron.cs" />
     <Compile Include="Assets\Scripts\Door.cs" />
     <Compile Include="Assets\Scripts\Ingredient.cs" />
     <Compile Include="Assets\Scripts\IngredientContainers.cs" />
